# NCAI-MAF

./: Dockerfile  Dockerignore  README.md  buildspec-dev.yml  buildspec.yml  pyproject.toml
NewsAgents/: __init__.py
NewsAgents/application/: __init__.py
NewsAgents/application/interfaces/: __init__.py  credentials_interface.py  llm_interface.py
NewsAgents/application/models/: model_configs.py
NewsAgents/application/services/: __init__.py  prompt_service.py
NewsAgents/business/interfaces/: business_logic_interface.py  workflow_interface.py
NewsAgents/infrastructure/: __init__.py
NewsAgents/infrastructure/aws/: __init__.py  aws_prompt_manager.py  secrets_manager.py
NewsAgents/infrastructure/conversation/: conversation_store.py  dynamodb_conversation_storage.py  storage_factory.py  storage_interface.py
NewsAgents/infrastructure/data/: data_manager.py  dynamodb_plugin.py  plugin_manager.py
NewsAgents/infrastructure/data/plugins/: Dynamo_DB_plugin.py  Factiva_plugin.py  SDL_plugin.py  SQL_plugin.py  plugin_interface.py  query_processor.py
NewsAgents/infrastructure/llm/: __init__.py  agent_manager.py  agent_manager_backup.py  factory.py  llm_bedrock_anthropic.py
NewsAgents/infrastructure/observability/: langfuse_observability.py
NewsAgents/orchestration/: __init__.py
NewsAgents/orchestration/coordinators/: analysis_coordinator.py  data_coordinator.py  enhanced_orchestrator.py  orchestrator.py  service_coordinator.py
NewsAgents/orchestration/interfaces/: coordinator_interface.py
NewsAgents/orchestration/selectors/: agent_selector.py  model_selector.py  strategy_selector.py
NewsAgents/services/: aws_credentials.py
api/: endpoints.py  enhanced_endpoints.py  enhanced_main.py  main.py  schema.py
application/interfaces/: observability_interface.py
application/services/: prompt_service.py
barrons/business_logic/: business_logic_service.py  format_response.py
barrons/config/: barrons_workflow.yaml  config.py  prompt_registry.py
barrons/tools/: fetch_articles.py  fetch_sql_data.py
barrons/workflows/: Stock_DB_Query_workflow.py  Stock_Data_Explainer_workflow.py  __init__.py  barrons_user_feedback_workflow.py  data_query_workflow.py  direct_query_workflow.py  followUpQuestions_workflow.py  master_chat_workflow.py  master_chat_workflow_backup.py  news_query_execution.py  news_query_execution_factiva.py
business/barrons/business_logic/: business_logic_service.py
business/barrons/config/: config.py
business/barrons/services/: aws_credentials.py  langfuse_observability.py
business/barrons/workflows/: Stock_DB_Query_workflow.py  Stock_Data_Explainer_workflow.py  barrons_user_feedback_workflow.py  data_query_workflow.py  direct_query_workflow.py  followUpQuestions_workflow.py  master_chat_workflow.py  news_query_execution.py
business/interfaces/: workflow_interface.py  workflow_map_function.py
infrastructure/aws/: aws_prompt_manager.py  secrets_manager.py
infrastructure/conversation/: conversation_store.py
infrastructure/data/: data_manager.py  plugin_manager.py
infrastructure/data/plugins/: DJ Shared Data API.json  DJ_Shared_Data_Schema.graphql  SDL_plugin.py  SQL_plugin.py  plugin_interface.py  query_processor.py
infrastructure/llm/: agent_manager.py  factory.py  llm_base.py  llm_bedrock_anthropic.py
orchestration/coordinators/: analysis_coordinator.py  data_coordinator.py  enhanced_orchestrator.py  orchestrator.py  service_coordinator.py
orchestration/interfaces/: coordinator_interface.py
orchestration/selectors/: agent_selector.py  model_selector.py  strategy_selector.py
